--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,3 +1,5 @@
+@import "../../node_modules/css-star-rating/scss/star-rating";
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
