--- a/views/partials/showAllPostCards.hbs
+++ b/views/partials/showAllPostCards.hbs
@@ -1,4 +1,4 @@
-<div class="col-3 card" style="width: 18rem;">
+<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 card" style="margin: 0rem;">
     <img class="card-img-top" src="https://cdn.pixabay.com/photo/2016/06/18/17/42/image-1465348_960_720.jpg" alt="Card image cap">
     <div class="card-body">
         <h5 class="card-title">{{this.title}}</h5>
