--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,25 +1,28 @@
+<div class="row">
+    <div class="col-sm-12 col-md-8 offset-md-2">
+        <form action="/signup" method="POST">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="name" name="name" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter username">
+            </div>
 
-<form action="/signup" method="POST">
-    <div class="form-group">
-        <label for="name">Name</label>
-        <input type="name" name="name" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Enter username">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="username" name="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter username">
+                <small id="usernameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
+            </div>
+
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
-
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input type="username" name="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter username">
-        <small id="usernameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
-    </div>
-
-    <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" required>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
