Fix PostUserFeed model and make it work

--- a/views/partials/showAllPostCards.hbs
+++ b/views/partials/showAllPostCards.hbs
@@ -4,6 +4,27 @@
         <h5 class="card-title">{{this.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">{{this.subtitle}}</h6>
         <p class="card-text">{{this.body}}</p>
-        {{ renderUserPostCardLinks }}
+
     </div>
+    <div class="rating star-icon direction-rtl value-1 half color-default label-top">
+        <div class="label-value">1.5</div>
+        <div class="star-container">
+            <div class="star">
+                <i class="star-empty"></i>
+                <i class="star-half"></i>
+                <i class="star-filled"></i>
+            </div>
+            <div class="star">
+                <i class="star-empty"></i>
+                <i class="star-half"></i>
+                <i class="star-filled"></i>
+            </div>
+            <div class="star">
+                <i class="star-empty"></i>
+                <i class="star-half"></i>
+                <i class="star-filled"></i>
+            </div>
+        </div>
+    </div>
+    {{ renderUserPostCardLinks }}
 </div>
