Add font awesome

--- a/views/partials/showAllPostCards.hbs
+++ b/views/partials/showAllPostCards.hbs
@@ -6,6 +6,7 @@
         <p class="card-text">{{this.body}}</p>
 
     </div>
+    <i class="fas fa-thumbs-up"></i>
     <div class="rating star-icon direction-rtl value-1 half color-default label-top">
         <div class="label-value">1.5</div>
         <div class="star-container">
