--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,7 @@
         <div class="alert alert-info">
             * {{ successMessage }}
         </div>
-        {{/if}} 
+        {{/if}}
         <div class="row">
             <div class="col-sm-12 col-md-9 col-lg-10">
                 {{{body}}}
@@ -46,6 +46,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
         crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/c683f11e27.js"></script>
     <script src="/javascripts/main.js"></script>
 </body>
 
