--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -446,4 +446,38 @@ a {
 .blue {
   background: blue; }
 
+fieldset,
+label {
+  margin: 0;
+  padding: 0; }
+
+h1 {
+  font-size: 0.5em;
+  margin: 1px; }
+
+/***** Rating star style ******/
+.stars-outer {
+  position: relative;
+  display: inline-block; }
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0; }
+
+.stars-outer::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #ccc; }
+
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #f8ce0b; }
+
 /*# sourceMappingURL=style.css.map */
