--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -16,3 +16,47 @@ a{
 .blue {
   background: blue;
 }
+
+fieldset,
+label {
+  margin: 0;
+  padding: 0;
+}
+
+// body {
+//   margin: 20px;
+// }
+
+h1 {
+  font-size: 0.5em;
+  margin: 1px;
+}
+
+/***** Rating star style ******/
+.stars-outer {
+  position: relative;
+  display: inline-block;
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+}
+
+.stars-outer::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #ccc;
+}
+
+.stars-inner::before {
+  content: "\f005 \f005 \f005 \f005 \f005";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  color: #f8ce0b;
+}
