--- a/views/partials/showAllPostCards.hbs
+++ b/views/partials/showAllPostCards.hbs
@@ -6,26 +6,35 @@
         <p class="card-text">{{this.body}}</p>
 
     </div>
-    <i class="fas fa-thumbs-up"></i>
-    <div class="rating star-icon direction-rtl value-1 half color-default label-top">
-        <div class="label-value">1.5</div>
-        <div class="star-container">
-            <div class="star">
-                <i class="star-empty"></i>
-                <i class="star-half"></i>
-                <i class="star-filled"></i>
-            </div>
-            <div class="star">
-                <i class="star-empty"></i>
-                <i class="star-half"></i>
-                <i class="star-filled"></i>
-            </div>
-            <div class="star">
-                <i class="star-empty"></i>
-                <i class="star-half"></i>
-                <i class="star-filled"></i>
+    <div class="row">
+        <div class="offset-1 col-1">
+            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+        </div>
+        <div class="col-2">
+            <i class="fa fa-thumbs-o-down" aria-hidden="true"></i>
+        </div>
+        <div class="col-2">
+            <i class="fa fa-eye" aria-hidden="true">46</i>
+        </div>
+        <div class="col-5">
+            <div class="stars-outer">
+                <div class="stars-inner"></div>
             </div>
         </div>
+
     </div>
+    
+
+    
     {{ renderUserPostCardLinks }}
+
+  <script>
+      const starsTotal = 5;
+
+      document.addEventListener('DOMContentLoaded', getRating);
+
+      function getRating() {
+          document.querySelector('.stars-inner').style.width = "88%";
+      }
+  </script>
 </div>
